added new section and fixed formatting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <script src="" crossorigin=""></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
 </head>
 
@@ -28,7 +28,7 @@
                 <div class="home__details">
                     <h2 class="home__name">Mustafa Nasirov</h2>
                     <h1 class="home__title">Junior Software Developer.</h1>
-                    <p class="home__description">3rd-year Computer Science Student, passionate about web development, software and design. <br>Driven and enthusiastic about learning new things to improve my skills as a computer scientist and developer. I have a passion for film and design, looking to combine both my computing and creative skills to create something beautiful.</p>
+                    <p class="home__description">3rd-year Computer Science Student, passionate about web development, software and design. <br><br> Driven and enthusiastic about learning new things to improve my skills as a computer scientist and developer. I have a passion for film and design, looking to combine both my computing and creative skills to create something beautiful.</p>
                 </div>
 
                 
@@ -72,6 +72,29 @@
                         <div class="about__dropbtn">Teaching Assistant @ Sevimli Bala
                             <div class="about__dropbtn-content">
                                 <p class="about__dropbtn-content-desc">Taught and organised several lessons to classes of young students with varying ages. Voluntary and paid sessions throughout the summer of each year.</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="about__dropsection">
+                        <h3 class="about__drop-title">Interests</h3>
+                        
+                        <div class="about__dropbtn">Films and Filmmaking
+                            <div class="about__dropbtn-content">
+                                <p class="about__dropbtn-content-desc">Filmed and edited a short film for the school's bursary scheme that was showcased at an event.<br><br>Directed, wrote and acted in a school play of the adaptation of '12 Angry Men' in a drame competition.</p>
+                            </div>
+                        </div>
+
+                        <div class="about__dropbtn">Football
+                            <div class="about__dropbtn-content">
+                                <p class="about__dropbtn-content-desc">Big fan of football team Tottenham Hotspurs, as well as a player that was involved in 1st and 2nd team football in both school and University. <br><br>Asssigned as the Sports Captain in High School.</p>
+                            </div>
+                        </div>
+
+                        <div class="about__dropbtn">Art
+                            <div class="about__dropbtn-content">
+                                <p class="about__dropbtn-content-desc">Learned how to paint and draw.</p>
                             </div>
                         </div>
                     </div>
