added footer and formatting

--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
 
 
 
+            <div class="contact">
+                <div class="contact__title">Get in Touch.
+                <button class="contact__btn">Contact</button>
+                </div>
+                
+            </div>
 
+            <footer class="footer__bar">
+                <div class="footer__icon">
+                    <img src="images/githublogo.png" class="footer__bar-img">
+                </div>
+            </footer>
 
             
         </container>
