added footer w links and changed fonts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,700;1,300&family=Inter&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/816337d037.js" crossorigin="anonymous"></script>
     <title>My Portfolio</title>
 </head>
 
@@ -107,12 +108,14 @@
                 <div class="contact__title">Get in Touch.
                 <button class="contact__btn">Contact</button>
                 </div>
-                
             </div>
 
             <footer class="footer__bar">
-                <div class="footer__icon">
-                    <img src="images/githublogo.png" class="footer__bar-img">
+                <div class="footer__icons">
+                    <a href="https://github.com/MustafaNasirov"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/mustafa-nasirov-829a021b8/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/mustafa-nasirov-829a021b8/"><i class="fa-solid fa-id-card-clip"></i></a>
+
                 </div>
             </footer>
 
