added to project grid

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                                 <img class="projects__grid-item-image" src="https://user-images.githubusercontent.com/86935457/179026692-9fe5920a-3de5-434f-b23a-7e88303a6ef9.png" alt="calculator-project"/>
                                 <div class="projects__grid-item-skill">JavaScript</div>
                                 <div class="projects__grid-item-skill">HTML</div>
+                                <div class="projects__grid-item-skill">CSS</div>
                                 <span class="projects__grid-item-icons"><i class="fa-brands fa-github"></i></span>
                             </div>
                     </div>
