updated project image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="projects__grid-item">
                         
                         <h2 class="projects__grid-item-title">Calculator</h2>
-                        <img class="projects__grid-item-image" src="https://user-images.githubusercontent.com/86935457/179317211-1a7fa0cd-4c61-4138-9f3d-e314ef7d79e0.png" alt="calculator-project"/>    
+                        <img class="projects__grid-item-image" src="./images/calculator.png" alt="calculator-project"/>    
                         <div class="projects__grid-item-skillTags">
                                 <div class="projects__grid-item-skill">JavaScript</div>
                                 <div class="projects__grid-item-skill">HTML</div>
