--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <div class="projects__grid-item-skill">JavaScript</div>
                                 <div class="projects__grid-item-skill">HTML</div>
                                 <div class="projects__grid-item-skill">CSS</div>
-                                <span class="projects__grid-item-icons"><a href="https://mustafanasirov.github.io/js-calculator/"><i class="projects__grid-item-icon fa-solid fa-eye"></i></a><a href="https://github.com/MustafaNasirov/js-calculator"></a><i class="projects__grid-item-icon fa-solid fa-code"></i></a></span>
+                                <span class="projects__grid-item-icons"><a href="https://mustafanasirov.github.io/js-calculator/"><i class="projects__grid-item-icon fa-solid fa-eye"></i></a><a href="https://github.com/MustafaNasirov/js-calculator"><i class="projects__grid-item-icon fa-solid fa-code"></i></a></span>
                             </div>
                     </div>
 
@@ -63,16 +63,19 @@
                                 <div class="projects__grid-item-skill">JavaScript</div>
                                 <div class="projects__grid-item-skill">HTML</div>
                                 <div class="projects__grid-item-skill">CSS</div>
-                                <span class="projects__grid-item-icons"><a href="https://mustafanasirov.github.io/jump-js-game/"><i class="projects__grid-item-icon fa-solid fa-eye"></i></a><a href="https://github.com/MustafaNasirov/jump-js-game"></a><i class="projects__grid-item-icon fa-solid fa-code"></i></a></span>
+                                <span class="projects__grid-item-icons"><a href="https://mustafanasirov.github.io/jump-js-game/"><i class="projects__grid-item-icon fa-solid fa-eye"></i></a><a href="https://github.com/MustafaNasirov/jump-js-game"><i class="projects__grid-item-icon fa-solid fa-code"></i></a></span>
                             </div>
                     </div>
 
                     <div class="projects__grid-item">
                         
-                        <h2 class="projects__grid-item-title">Project No.3</h2>
+                        <h2 class="projects__grid-item-title">Beer Catalogue</h2>
                         <img class="projects__grid-item-image" src="https://user-images.githubusercontent.com/86935457/179320482-39d88483-51a2-49f9-ae1f-4c6728096b3f.png" alt="placeholder"/>
                             <div class="projects__grid-item-skillTags">
                                 <div class="projects__grid-item-skill">JavaScript</div>
+                                <div class="projects__grid-item-skill">CSS</div>
+                                <div class="projects__grid-item-skill">React</div>
+                                <div class="projects__grid-item-skill">APIs</div>
                                 <span class="projects__grid-item-icons"><i class="projects__grid-item-icon fa-solid fa-eye"></i><i class="projects__grid-item-icon fa-solid fa-code"></i></span>
                             </div>
                     </div>
