added recent project to projects section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="projects__grid-item">
                         
                         <h2 class="projects__grid-item-title">2D Platformer</h2>
-                        <img class="projects__grid-item-image" src="https://user-images.githubusercontent.com/86935457/179026692-9fe5920a-3de5-434f-b23a-7e88303a6ef9.png" alt="calculator-project"/>
+                        <img class="projects__grid-item-image" src="https://user-images.githubusercontent.com/86935457/179026692-9fe5920a-3de5-434f-b23a-7e88303a6ef9.png" alt="javascript game project"/>
                             <div class="projects__grid-item-skillTags">
                                 <div class="projects__grid-item-skill">JavaScript</div>
                                 <div class="projects__grid-item-skill">HTML</div>
@@ -70,13 +70,13 @@
                     <div class="projects__grid-item">
                         
                         <h2 class="projects__grid-item-title">Beer Catalogue</h2>
-                        <img class="projects__grid-item-image" src="https://user-images.githubusercontent.com/86935457/179320482-39d88483-51a2-49f9-ae1f-4c6728096b3f.png" alt="placeholder"/>
+                        <img class="projects__grid-item-image" src="./images//punk-api-thumb.png" alt="punk api project"/>
                             <div class="projects__grid-item-skillTags">
                                 <div class="projects__grid-item-skill">JavaScript</div>
                                 <div class="projects__grid-item-skill">CSS</div>
                                 <div class="projects__grid-item-skill">React</div>
                                 <div class="projects__grid-item-skill">APIs</div>
-                                <span class="projects__grid-item-icons"><i class="projects__grid-item-icon fa-solid fa-eye"></i><i class="projects__grid-item-icon fa-solid fa-code"></i></span>
+                                <span class="projects__grid-item-icons"><a href="https://mustafanasirov.github.io/beer-catalogue-api/"><i class="projects__grid-item-icon fa-solid fa-eye"></i></a><a href="https://github.com/MustafaNasirov/beer-catalogue-api"><i class="projects__grid-item-icon fa-solid fa-code"></i></a></span>
                             </div>
                     </div>
 
@@ -135,7 +135,7 @@
 
                         <div class="about__dropbtn">Art
                             <div class="about__dropbtn-content">
-                                <p class="about__dropbtn-content-desc">Learned how to paint and draw.</p>
+                                <p class="about__dropbtn-content-desc">Love to doodle, draw, and paint as well as digital art & design</p>
                             </div>
                         </div>
                     </div>
