changed a project title

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     <div class="projects__grid-item">
                         
-                        <h2 class="projects__grid-item-title">Beer Catalogue</h2>
+                        <h2 class="projects__grid-item-title">Beer API Catalogue</h2>
                         <img class="projects__grid-item-image" src="./images//punk-api-thumb.png" alt="punk api project"/>
                             <div class="projects__grid-item-skillTags">
                                 <div class="projects__grid-item-skill">JavaScript</div>
