improved project styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="home__details">
                     <hr id="seperator">
                     <h1 class="home__title">Junior Software Developer.</h1>
-                    <p class="home__description">3rd-year Computer Science Student, passionate about web development, software and design. <br><br> Driven and enthusiastic about learning new things to improve my skills as a computer scientist and developer. I have a passion for film and design, looking to combine both my computing and creative skills to create something beautiful.</p>
+                    <p class="home__description">Computer Science Graduate, passionate about web development, software and design. <br><br> Driven and enthusiastic about learning new things to improve my skills as a computer scientist and developer. I have a passion for film and design, looking to combine both my computing and creative skills to create something beautiful.</p>
                 </div>
 
             </section>
@@ -68,7 +68,7 @@
 
                     <div class="projects__grid-item">
                         
-                        <h2 class="projects__grid-item-title">Beer API Catalogue</h2>
+                        <h2 class="projects__grid-item-title">Beer Catalogue</h2>
                         <img class="projects__grid-item-image" src="./images//punk-api-thumb.png" alt="punk api project"/>
                             <div class="projects__grid-item-skillTags">
                                 <div class="projects__grid-item-skill">JavaScript</div>
@@ -87,10 +87,13 @@
                 <div class="about__details">
                     <h1 class="about__title">About</h1>
                     <hr id="seperator">
-                    <p class="about__description">I've enrolled in _nology's Technology Consultancy Programme to further push my programming skills and knowledge to be able to enter the tech industry. Refine and learn new languages such as HTML, CSS, Java, JavaScript as well as libraries & frameworks such as React and Spring Boot. </p>
+                    <p class="about__description">I had always been intrigued by creating things and could not find the right form of art that fulfils me, until I found tech and its possibilities. Seeing my work shaping in front of me through different stages of the development process made me realize I have found my art.<br><br>
+                        After 3 years of studying computer science, I was eager to enter the exciting world of tech and decided to enrol in _nology.<br><br>I've enrolled in this Technology Consultancy Programme to further push my programming skills and knowledge to be able to enter the tech industry. Refine and learn new languages such as HTML, CSS, Java, JavaScript as well as libraries & frameworks such as React and Spring Boot. 
+
+                    </p>
                 </div>
 
-                <img class="about__image" src="images/PortfolioHeadShot2.jpg" alt="Portfolio Photo"></img>
+                <img class="about__image" src="images/PortfolioHeadShot2.jpg" alt="Portfolio Photo" id="headshot"></img>
 
                 <div class="about__grid">        
 
