improved contact section

--- a/index.html
+++ b/index.html
@@ -174,22 +174,20 @@
                     </div>
                 </div>
             </section>
-
-
+            
 
             <div class="contact" id="contact">
-                <div class="contact__title">Get in Touch.</div>
                 <a class="contact__btn" href="mailto:mustafanasirov@gmail.com">Contact</a>
-                <div class="contact__email"></div>
-                
+                <div class="contact__title">Get in Touch.
+                    <div class="contact__icons">
+                        <a href="https://github.com/MustafaNasirov"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/mustafa-nasirov-829a021b8/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/mustafa-nasirov-829a021b8/"><i class="fa-solid fa-id-card-clip"></i></a>
+                    </div>
+                </div>
             </div>
 
             <footer class="footer__bar">
-                <div class="footer__icons">
-                    <a href="https://github.com/MustafaNasirov"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/mustafa-nasirov-829a021b8/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://www.linkedin.com/in/mustafa-nasirov-829a021b8/"><i class="fa-solid fa-id-card-clip"></i></a>
-                </div>
                 <p class="footer__copyright">© 2022 Mustafa Nasirov | All rights reserved.</p>
             </footer>
 
