--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,700;1,300&family=Inter&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/816337d037.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="/images/portfolio-icon.png">
+    <link rel="icon" href="https://user-images.githubusercontent.com/86935457/194784802-056ad3b4-2308-4bed-845f-d2093c03d3a1.png">
     <title>My Portfolio</title>
 </head>
 
